# lmos

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pytest.yml
src/lmos/: __init__.py  _version.py  lmos.py
tests/: test_lmos.py
