[metadata]
name = lmos
author = David Richardson
author_email = drichardson42@gatech.edu
license = MIT
description = My description here
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
python_requires = >= 3.7
package_dir = 
    =src
packages = find:
install_requires =
    numpy
    scipy

[options.extras_require]
dev=
    twine
test=
    pytest

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/lmos/_version.py
versionfile_build = src/lmos/_version.py
tag_prefix = v
parentdir_prefix = lmos-
